fixed spacings

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,8 +136,8 @@ button.header-button {
 
 .button-header{
     font-weight: 900;
-    font-size: 18px;
-    margin:40px;
+    font-size: 25px;
+    margin:20px;
 }
 
 .button-subtext{
